--- a/src/config.json
+++ b/src/config.json
@@ -13,7 +13,13 @@
     },
     "exchange": {
       "address": "0xCf7Ed3AccA5a467e9e704C703E8D87F634fB0Fc9"
-    }
+    },
+    "exploreURL": "#"
+  },
+
+  "5": {
+    "exploreURL": "https://goerli.etherscan.io/"
+
   }
 
 }
