--- a/src/config.json
+++ b/src/config.json
@@ -33,6 +33,24 @@
       "address": "0xDc087135723Cb6cb1f378ffFA98BFBFf375eb567"
     },
     "exploreURL": "https://goerli.etherscan.io/"
+  },
+
+  "80001": {
+    "dApp": {
+      "address": "0xC2F96e256348b23E75efc89a4Baa8F02ABfEAC3A"
+    },
+
+    "mDai": {
+      "address": "0x3595D82eBF7e99AFD1EAa800B784cDbdCEE4d8F2"
+    },
+
+    "mETH": {
+      "address": "0x84541361F9f3FE6c7ccF80aAcE7F50bdA7AD6259"
+    },
+    "exchange": {
+      "address": "0xd84bB087Cf8BCB0d2014e34911AaE0b601D44AC1"
+    },
+    "exploreURL": "https://mumbai.polygonscan.com/"
   }
 
 }
